--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "structlog>=25.4.0",
     "json5>=0.9",
     "know @ git+https://github.com/VectorOps/know.git",
+    "fastmcp>=2.12.4",
 ]
 
 [tool.uv]
