--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -1,6 +1,6 @@
 # Default Vocode configuration
 ui:
-#  log_level: debug
+  log_level: debug
 variables:
   LLM_DISCOVERY_MODEL: openai/gpt-5-mini
   LLM_ARCHITECT_MODEL: openai/gpt-5
@@ -49,10 +49,10 @@ workflows:
         confirmation: auto
       - name: test
         type: exec
-        command: uv run pytest -qq -rf ./tests/
+        command: uv run pytest -q -rf ./tests/
         timeout_s: 300
         expected_return_code: 0
-        message: "Tests results below:"
+        message: "All changes were successfully applied. Unit test results are below:"
         confirmation: auto
         outcomes:
           - name: success
@@ -103,12 +103,13 @@ workflows:
         name: coder_files
       - $include:
           template: nodes/coder.yaml
-          confirmation: auto
+        confirmation: auto
       - $include:
           template: nodes/apply_patch.yaml
+        confirmation: auto
       - name: test
         type: exec
-        command: uv run pytest -qq -rf ./tests/
+        command: uv run pytest -q -rf ./tests/
         timeout_s: 300
         expected_return_code: 0
         message: "Tests results below:"
@@ -122,10 +123,10 @@ workflows:
       - architect.done -> coder_files
       - coder_files.done -> coder
       - coder.done -> apply
-      - apply.success -> tests
+      - apply.success -> test
       - apply.fail -> coder:keep_state
-      - tests.success -> prompt
-      - tests.fail -> architect:keep_state
+      - test.success -> prompt
+      - test.fail -> architect:keep_state
   idler:
     nodes:
       - name: prompt
