--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "json5>=0.9",
     "know @ git+https://github.com/VectorOps/know.git",
     "fastmcp>=2.12.4",
+    "jsonpath-ng>=1.7.0",
 ]
 
 [tool.uv]
