--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -1,6 +1,6 @@
 # Default Vocode configuration
 ui:
-#  log_level: debug
+  log_level: debug
 variables:
   LLM_DISCOVERY_MODEL: openai/gpt-5-mini
   LLM_ARCHITECT_MODEL: openai/gpt-5
@@ -94,13 +94,13 @@ workflows:
           - name: done
       - $include:
           template: nodes/file_state.yaml
-          reset_policy: keep_state
+          skip: true
       - $include:
           template: nodes/architect.yaml
           reset_policy: keep_state
-      - $include:
-          template: nodes/file_state.yaml
-        name: coder_files
+        preprocessors:
+          - name: file_state
+            mode: user
       - $include:
           template: nodes/coder.yaml
         confirmation: auto
@@ -118,10 +118,8 @@ workflows:
           - name: success
           - name: fail
     edges:
-      - prompt.done -> file_state
-      - file_state.done -> architect
-      - architect.done -> coder_files
-      - coder_files.done -> coder
+      - prompt.done -> architect
+      - architect.done -> coder
       - coder.done -> apply
       - apply.success -> test
       - apply.fail -> coder:keep_state
