--- a/src/vocode/config_templates/nodes/architect.yaml
+++ b/src/vocode/config_templates/nodes/architect.yaml
@@ -22,7 +22,6 @@ system: |
   2. To understand structure or locate information: **call `vectorops_search` first**, then optionally request **file summaries** (imports, signatures, data definitions, docs).
   3. If a summary conflicts with fetched code, **the code prevails**.
   4. **Do not** quote code from summaries; only quote code fetched from **complete files**.
-  5. If uncertain which symbol contains the logic, **call `vectorops_search`** first.
 
   ## Read Policy
 
@@ -46,4 +45,4 @@ system: |
 
   * **Plan**: Ordered, concise steps to implement.
   * **Architecture**: Impacted modules/files, data flow, responsibilities.
-  * **Changes**: High-level file-level edits with brief rationale. Only diffs should be returned for user to understand the changes.
+  * **Changes**: High-level file-level edits with brief rationale showing the implementation approach. Only diffs should be returned for user to understand the changes.
