--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -2,13 +2,13 @@
 ui:
 #  log_level: debug
 variables:
-  LLM_DISCOVERY_MODEL: openai/gpt-5-mini
-  LLM_ARCHITECT_MODEL: openai/gpt-5
-  LLM_CODER_MODEL: openai/gpt-5-mini
-#  LLM_DISCOVERY_MODEL: gemini/gemini-2.5-flash
-#  LLM_ARCHITECT_MODEL: gemini/gemini-2.5-pro
-#  LLM_CODER_MODEL: gemini/gemini-2.5-flash
-#  LLM_DIFF_FORMAT: patch
+#  LLM_DISCOVERY_MODEL: openai/gpt-5
+#  LLM_ARCHITECT_MODEL: openai/gpt-5
+#  LLM_CODER_MODEL: openai/gpt-5
+  LLM_DISCOVERY_MODEL: gemini/gemini-2.5-flash
+  LLM_ARCHITECT_MODEL: gemini/gemini-2.5-pro
+  LLM_CODER_MODEL: gemini/gemini-2.5-flash
+  LLM_DIFF_FORMAT: patch
 tools:
   - name: vectorops_read_files
     auto_approve: true
@@ -37,6 +37,10 @@ workflows:
         tools:
           - vectorops_summarize_files
           - vectorops_read_files
+        preprocessors:
+          - name: file_read
+            paths:
+              - AGENTS.md
         function_tokens_pct: 25
         reset_policy: keep_results
       - $include:
@@ -101,6 +105,9 @@ workflows:
         preprocessors:
           - name: file_state
             mode: user
+          - name: file_read
+            paths:
+              - AGENTS.md
       - $include:
           template: nodes/coder.yaml
         confirmation: auto
