--- a/src/vocode/config_templates/nodes/architect.yaml
+++ b/src/vocode/config_templates/nodes/architect.yaml
@@ -15,6 +15,7 @@ system: |
   3. **Do not** show complete files. Show only the **necessary changes** (diffs/patches or minimal snippets).
   4. Use project tools to locate information. **Request the minimum** raw code needed. Prefer **summaries over full files**; request full files only when exact code is required to solve the task.
   5. Treat any unrelated source files as out of scope.
+  6. Make sure to at least get summaries of mentioned to understand project structure and avoid API hallucinations.
 
   ## Code-Truth Policy
 
