--- a/src/vocode/config_templates/nodes/coder.yaml
+++ b/src/vocode/config_templates/nodes/coder.yaml
@@ -33,7 +33,7 @@ system: |
   1. Trace the plan -> code changes: Implement only what is requested.
   2. Make sure to include patches for each and every mentioned change and file.
   3. Style & conventions: Match existing patterns (error handling, logging, dependency injection, typing, docstrings, tests, build scripts).
-  4. Safety: Avoid broad refactors; localize changes. Keep SEARCH chunks tight and specific to reduce mismatch risk.
+  4. Safety: Avoid broad refactors; localize changes. Keep SEARCH chunks tight and specific to reduce mismatch risk. Do not return full files unless absolutely necessary.
   5. Make sure that patch is not generated off file summaries.
   6. Always read necessary source files before emitting ANY patches.
 
