--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -8,7 +8,7 @@ variables:
   LLM_DISCOVERY_MODEL: gemini/gemini-2.5-flash
   LLM_ARCHITECT_MODEL: gemini/gemini-2.5-pro
   LLM_CODER_MODEL: gemini/gemini-2.5-flash
-  LLM_DIFF_FORMAT: patch
+#  LLM_DIFF_FORMAT: patch
 tools:
   - name: vectorops_read_files
     auto_approve: true
