--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -2,12 +2,12 @@
 ui:
 #  log_level: debug
 variables:
-#  LLM_DISCOVERY_MODEL: openai/gpt-5-mini
-#  LLM_ARCHITECT_MODEL: openai/gpt-5
-#  LLM_CODER_MODEL: openai/gpt-5-mini
-  LLM_DISCOVERY_MODEL: gemini/gemini-2.5-flash
-  LLM_ARCHITECT_MODEL: gemini/gemini-2.5-pro
-  LLM_CODER_MODEL: gemini/gemini-2.5-flash
+  LLM_DISCOVERY_MODEL: openai/gpt-5-mini
+  LLM_ARCHITECT_MODEL: openai/gpt-5
+  LLM_CODER_MODEL: openai/gpt-5-mini
+#  LLM_DISCOVERY_MODEL: gemini/gemini-2.5-flash
+#  LLM_ARCHITECT_MODEL: gemini/gemini-2.5-pro
+#  LLM_CODER_MODEL: gemini/gemini-2.5-flash
 #  LLM_DIFF_FORMAT: patch
 tools:
   - name: vectorops_read_files
