Added run stats + way to let node run up to X times

--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -30,6 +30,7 @@ workflows:
           - name: done
       - $include:
           template: nodes/discovery.yaml
+          max_runs: 1
         function_tokens_pct: 25
         confirmation: auto
       - $include:
