Allow executors to finish loop before continuing

--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -32,9 +32,9 @@ workflows:
           - name: done
       - $include:
           template: nodes/discovery.yaml
-        max_runs: 1
         function_tokens_pct: 25
         confirmation: auto
+        reset_policy: keep_results
       - $include:
           template: nodes/architect.yaml
         tools:
