--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -1,6 +1,6 @@
 # Default Vocode configuration
 ui:
-#  log_level: debug
+  log_level: debug
 variables:
   LLM_DISCOVERY_MODEL: openai/gpt-5-mini
   LLM_ARCHITECT_MODEL: openai/gpt-5
@@ -11,13 +11,13 @@ variables:
 #  LLM_DIFF_FORMAT: patch
 default_workflow: "architect"
 tools:
-  - name: vectorops_read_files
+  - name: read_files
     auto_approve: true
-  - name: vectorops_summarize_files
+  - name: summarize_files
     auto_approve: true
-  - name: vectorops_list_files
+  - name: list_files
     auto_approve: true
-  - name: vectorops_search
+  - name: search_project
     auto_approve: true
 workflows:
   architect:
@@ -38,8 +38,8 @@ workflows:
       - $include:
           template: nodes/architect.yaml
         tools:
-          - vectorops_summarize_files
-          - vectorops_read_files
+          - summarize_files
+          - read_files
         preprocessors:
           - name: file_read
             paths:
@@ -49,7 +49,7 @@ workflows:
       - $include:
           template: nodes/coder.yaml
         tools:
-          - vectorops_read_files
+          - read_files
         confirmation: auto
       - $include:
           template: nodes/apply_patch.yaml
@@ -151,9 +151,9 @@ workflows:
       - $include:
           template: nodes/analyst.yaml
         tools:
-          - vectorops_search
-          - vectorops_summarize_files
-          - vectorops_read_files
+          - search_project
+          - summarize_files
+          - read_files
     edges:
       - prompt.done -> analyst
       - analyst.done -> prompt
@@ -246,9 +246,9 @@ workflows:
         model: ${LLM_ARCHITECT_MODEL}
         reset_policy: keep_state
         tools:
-          - vectorops_summarize_files
-          - vectorops_read_files
-          - vectorops_search
+          - summarize_files
+          - read_files
+          - search_project
         outcomes:
           - name: done
     edges:
