--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "GitPython>=3.1.36",
     "structlog>=25.4.0",
     "json5>=0.9",
-    "know @ git+https://github.com/VectorOps/know.git",
+    "knowlt @ git+https://github.com/VectorOps/knowlt.git",
     "fastmcp>=2.12.4",
     "jsonpath-ng>=1.7.0",
 ]
