--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -1,6 +1,8 @@
 # Default Vocode configuration
 ui:
-#  log_level: debug
+  #log_level: debug
+  enabled_loggers:
+    LiteLLM: warn
 variables:
   LLM_DISCOVERY_MODEL: openai/gpt-5-mini
   LLM_ARCHITECT_MODEL: openai/gpt-5
