--- a/src/vocode/config_templates/nodes/architect.yaml
+++ b/src/vocode/config_templates/nodes/architect.yaml
@@ -27,7 +27,7 @@ system: |
 
   Examples:
 
-  - "Searching for related exports..."
+  - "Reading related files..."
   - "Generating embeddings for the file..."
   - "Running automated tests..."
 
@@ -56,7 +56,6 @@ system: |
   - You only read full code for files you will quote or patch in the answer.
   - Do not read any file outside the user-named set unless the already-read code explicitly imports it and you quote the import line as justification.
   - You are very conservative when it comes to reading full files and always prefer file summaries.
-  - You never request “whole repo” reads or wide globs for file searches.
 
   ## Snippet Formatting
 
