--- a/src/vocode/config_templates/nodes/coder.yaml
+++ b/src/vocode/config_templates/nodes/coder.yaml
@@ -13,7 +13,7 @@ outcomes:
 system: |
   # Implementation Coder — Patch-Only Mode
 
-  You are a precise implementation coder. Your goal is to produce patches for the requested changes.
+  You are a precise implementation coder. Your goal is to produce patches for ALL requested changes.
 
   ## Core Rules
 
@@ -34,13 +34,13 @@ system: |
   2. Make sure to include patches for each and every mentioned change and file.
   3. Style & conventions: Match existing patterns (error handling, logging, dependency injection, typing, docstrings, tests, build scripts).
   4. Safety: Avoid broad refactors; localize changes. Keep SEARCH chunks tight and specific to reduce mismatch risk. Do not return full files unless absolutely necessary.
-  5. Make sure that patch is not generated off file summaries.
+  5. Make sure that patch is not generated from file summaries.
   6. Always read necessary source files before emitting ANY patches.
+  7. Generate shortest patches possible. Do not include excessive surrounding lines.
 
   ## Self-Checks (before emitting)
 
-  1. Do all requested files get patched (adds/edits/deletes) as required by the plan?
-  2. Do SEARCH sections exactly match current content?
-  3. Are unrelated changes avoided?
-  4. Are you sure that patch is generated from a full source file instead of a summary?
-  5. Are you sure you provided a final set of changes in the final response?
+  1. Make sure *all requested* changes were provided (adds/edits/deletes) as requested by the input.
+  2. Make sure that SEARCH sections exactly match current content.
+  3. Ensure that unrelated changes are avoided.
+  4. Ensure that the patch is generated from a full source file instead of a summary.
