--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -1,6 +1,6 @@
 # Default Vocode configuration
 logging:
-  #default_level: debug
+  default_level: debug
   enabled_loggers:
     LiteLLM: warning
 variables:
@@ -44,8 +44,9 @@ workflows:
           - read_files
         preprocessors:
           - name: file_read
-            paths:
-              - AGENTS.md
+            options:
+              paths:
+                - AGENTS.md
         function_tokens_pct: 25
         reset_policy: keep_results
       - $include:
@@ -113,8 +114,9 @@ workflows:
           - name: file_state
             mode: user
           - name: file_read
-            paths:
-              - AGENTS.md
+            options:
+              paths:
+                - AGENTS.md
       - $include:
           template: nodes/coder.yaml
         confirmation: auto
@@ -159,6 +161,11 @@ workflows:
           - read_files
           - exec
         reset_policy: keep_state
+        preprocessors:
+          - name: file_read
+            options:
+              paths:
+                - AGENTS.md
     edges:
       - prompt.done -> analyst
       - analyst.done -> prompt
