--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -1,12 +1,17 @@
 # Default Vocode configuration
 logging:
-  default_level: debug
+  #default_level: debug
   enabled_loggers:
     LiteLLM: warning
 variables:
   LLM_DISCOVERY_MODEL: openai/gpt-5-mini
-  LLM_ARCHITECT_MODEL: openai/gpt-5
+  LLM_ARCHITECT_MODEL: openai/gpt-5.1
   LLM_CODER_MODEL: openai/gpt-5-mini
+# OpenAI
+#  LLM_DISCOVERY_MODEL: openai/gpt-5-mini
+#  LLM_ARCHITECT_MODEL: openai/gpt-5
+#  LLM_CODER_MODEL: openai/gpt-5-mini
+# Gemini
 #  LLM_DISCOVERY_MODEL: gemini/gemini-2.5-flash
 #  LLM_ARCHITECT_MODEL: gemini/gemini-2.5-pro
 #  LLM_CODER_MODEL: gemini/gemini-2.5-flash
