Add reasoning effort to llm node

--- a/src/vocode/config_templates/nodes/analyst.yaml
+++ b/src/vocode/config_templates/nodes/analyst.yaml
@@ -3,6 +3,7 @@ variables:
 name: analyst
 type: llm
 model: ${LLM_ARCHITECT_MODEL}
+reasoning_effort: ${LLM_ARCHITECT_REASONING}
 outcomes:
   - name: done
 system: |
