--- a/.vocode/config.yaml
+++ b/.vocode/config.yaml
@@ -6,6 +6,7 @@ logging:
 variables:
   LLM_DISCOVERY_MODEL: openai/gpt-5-mini
   LLM_ARCHITECT_MODEL: openai/gpt-5.1
+  LLM_ARCHITECT_REASONING: medium
   LLM_CODER_MODEL: openai/gpt-5-mini
 # OpenAI
 #  LLM_DISCOVERY_MODEL: openai/gpt-5-mini
