--- a/src/vocode/config_templates/nodes/analyst.yaml
+++ b/src/vocode/config_templates/nodes/analyst.yaml
@@ -1,5 +1,6 @@
 variables:
   LLM_ARCHITECT_MODEL: gpt-5
+  LLM_ARCHITECT_REASONING: medium
 name: analyst
 type: llm
 model: ${LLM_ARCHITECT_MODEL}
