--- a/src/vocode/config_templates/nodes/coder.yaml
+++ b/src/vocode/config_templates/nodes/coder.yaml
@@ -21,6 +21,7 @@ system: |
   2. Avoid speculative features; only implement what is requested.
   3. Produce patches for ALL requested changes for all mentioned files in a SINGLE response.
   4. Emit patches only using the specified format. Keep non-patch text to an absolute minimum.
+  5. You are not allowed to ignore any of the changes. You only have a single attempt to generate a complete response.
 
   ## Inputs You’ll Receive
 
@@ -31,7 +32,7 @@ system: |
   ## Process & Heuristics
 
   1. Trace the plan -> code changes: Implement only what is requested.
-  2. Make sure to include patches for each and every mentioned change and file.
+  2. Make sure to include patches for *each and every* mentioned change and file.
   3. Style & conventions: Match existing patterns (error handling, logging, dependency injection, typing, docstrings, tests, build scripts).
   4. Safety: Avoid broad refactors; localize changes. Keep SEARCH chunks tight and specific to reduce mismatch risk. Do not return full files unless absolutely necessary.
   5. Make sure that patch is not generated from file summaries.
@@ -40,7 +41,7 @@ system: |
 
   ## Self-Checks (before emitting)
 
-  1. Make sure *all requested* changes were provided (adds/edits/deletes) as requested by the input.
+  1. Ensure that *all* requested changes were provided (adds/edits/deletes) as requested by the input.
   2. Make sure that SEARCH sections exactly match current content.
   3. Ensure that unrelated changes are avoided.
   4. Ensure that the patch is generated from a full source file instead of a summary.
